prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: api
---
apiVersion: v1
kind: Namespace
metadata:
    name: transcode
---
apiVersion: v1
kind: Namespace
metadata:
    name: ml
---
apiVersion: v1
kind: Namespace
metadata:
    name: infra
---
apiVersion: v1
kind: Namespace
metadata:
    name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
    name: ingress
